<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_robot_base</name>
  <version>1.0.0</version>
  <description>QRB ROS robot base package</description>
  <maintainer email="chenghen@qti.qualcomm.com">Chengheng Tan</maintainer>
  <maintainer email="quic_penwang@quicinc.com">Peng Wang</maintainer>
  <maintainer email="quic_laoyi@quicinc.com">Busy Lao</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>qrb_ros_robot_base_msgs</build_depend>
  <build_depend>qrb_robot_base_manager</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
